fixed silhouette and colors display

--- a/BP-work/marble_gallery.html
+++ b/BP-work/marble_gallery.html
@@ -260,7 +260,7 @@
 <body>
     <div class="header">
         <h1>🎨 ThePourtrait Gallery</h1>
-        <p>Create beautiful marble art with AI-powered paint pouring</p>
+        <p>Create beautiful marble art with interactive paint pouring</p>
     </div>
 
     <div class="container">
@@ -481,8 +481,8 @@
             const demoArt = {
                 imagePath: 'marble_output.png',
                 details: {
-                    silhouette: 'starrynight.png',
-                    colors: ['#5f27cd', '#ff3f34', '#a0e7e5', '#7bed9f', '#00d2d3', '#ffa502'],
+                    silhouette: 'starrynight',
+                    colors: ['Deep Purple', 'Crimson', 'Ice Blue', 'Light Green', 'Bright Cyan', 'Orange'],
                     seed: 42
                 }
             };
