--- a/BP-work/marble_gallery.html
+++ b/BP-work/marble_gallery.html
@@ -481,7 +481,7 @@
             const demoArt = {
                 imagePath: 'marble_output.png',
                 details: {
-                    silhouette: 'starrynight',
+                    silhouette: 'Starrynight',
                     colors: ['Deep Purple', 'Crimson', 'Ice Blue', 'Light Green', 'Bright Cyan', 'Orange'],
                     seed: 42
                 }
