--- a/BP-work/marble_gallery1.html
+++ b/BP-work/marble_gallery1.html
@@ -51,7 +51,7 @@
             padding: 2rem;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             backdrop-filter: blur(10px);
-            height: 
+            height: auto;
         }
 
         .art-image {
