working reset button

--- a/BP-work/marble_gallery.html
+++ b/BP-work/marble_gallery.html
@@ -306,9 +306,14 @@
                                 style="background: linear-gradient(45deg, #6c5ce7, #a29bfe);">
                             💾 Download Art
                         </button>
+                        <button type="button" class="send-btn" id="resetBtn" onclick="resetFromArduino()" 
+                                style="background: linear-gradient(45deg, #ef4444, #f97316);">
+                            🔄 Reset (Read Arduino)
+                        </button>
                     </div>
                 </form>
                 <div id="emailStatus"></div>
+                <div id="resetStatus" style="margin-top: 0.75rem;"></div>
             </div>
         </div>
     </div>
@@ -468,6 +473,57 @@
             // Show success message
             document.getElementById('emailStatus').innerHTML = 
                 '<div class="status-message status-success">✅ Download started! Check your downloads folder.</div>';
+        }
+
+        async function resetFromArduino() {
+            const resetBtn = document.getElementById('resetBtn');
+            const resetStatus = document.getElementById('resetStatus');
+            const artContainer = document.getElementById('artContainer');
+            const artInfo = document.getElementById('artInfo');
+
+            // UI: show loading state
+            resetBtn.disabled = true;
+            const originalText = resetBtn.innerHTML;
+            resetBtn.innerHTML = '<span class="loading"></span>Reading from Arduino...';
+            resetStatus.innerHTML = '<div class="status-message status-info">🧽 Resetting: capturing 6 colors from Arduino and clearing the canvas...</div>';
+
+            try {
+                const resp = await fetch('/arduino-reset', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ colorTimeout: 25 })
+                });
+                if (!resp.ok) {
+                    const err = await resp.json().catch(() => ({}));
+                    throw new Error(err.error || 'Reset failed');
+                }
+                const data = await resp.json();
+
+                // Clear current UI state and canvas
+                currentArtPath = null;
+                currentArtInfo = null;
+                artContainer.innerHTML = `
+                    <div class="art-placeholder">
+                        Canvas cleared. Generate new art to see your updated palette.
+                    </div>
+                `;
+                artInfo.style.display = 'none';
+                document.getElementById('sendBtn').disabled = true;
+                document.getElementById('downloadBtn').disabled = true;
+
+                // Feedback about captured colors
+                if (data.colors && data.colors.length) {
+                    resetStatus.innerHTML = `<div class="status-message status-success">✅ Captured colors from Arduino: ${data.colors.join(', ')}. Canvas cleared.</div>`;
+                } else {
+                    resetStatus.innerHTML = '<div class="status-message status-success">✅ Arduino capture complete. Canvas cleared.</div>';
+                }
+            } catch (e) {
+                console.error('Reset error:', e);
+                resetStatus.innerHTML = `<div class="status-message status-error">❌ ${e.message || 'Failed to reset from Arduino.'}</div>`;
+            } finally {
+                resetBtn.disabled = false;
+                resetBtn.innerHTML = originalText;
+            }
         }
 
         // Enable send button when art is generated
