--- a/BP-work/marble_gallery1.html
+++ b/BP-work/marble_gallery1.html
@@ -326,9 +326,14 @@
                                 style="background: linear-gradient(45deg, #6c5ce7, #a29bfe);">
                             Download Art
                         </button>
+                        <button type="button" class="send-btn" id="resetBtn" onclick="resetFromArduino()"
+                                style="background: linear-gradient(45deg, #ef4444, #f97316);">
+                            Reset (Read Arduino)
+                        </button>
                     </div>
                 </form>
                 <div id="emailStatus"></div>
+                <div id="resetStatus" style="margin-top: 0.75rem;"></div>
             </div>
         </div>
     </div>
@@ -606,6 +611,48 @@
  
             document.getElementById('emailStatus').innerHTML = 
                 '<div class="status-message status-success">✅ Download started! Check your downloads folder.</div>';
+        }
+
+        async function resetFromArduino() {
+            const resetBtn = document.getElementById('resetBtn');
+            const resetStatus = document.getElementById('resetStatus');
+            const artContainer = document.getElementById('artContainer');
+            const artInfo = document.getElementById('artInfo');
+
+            const orig = resetBtn.innerHTML;
+            resetBtn.disabled = true;
+            resetBtn.innerHTML = '<span class="loading"></span>Reading from Arduino...';
+            resetStatus.innerHTML = '<div class="status-message status-info">Starting Arduino capture and clearing the canvas...</div>';
+
+            try {
+                const resp = await fetch('/reset-arduino', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({})
+                });
+                if (!resp.ok) {
+                    const err = await resp.json().catch(() => ({}));
+                    throw new Error(err.error || 'Reset failed');
+                }
+                // Clear UI state immediately; capture runs in background
+                currentArtPath = null;
+                currentArtInfo = null;
+                artContainer.innerHTML = `
+                    <div class="art-placeholder">
+                        Canvas cleared. Generate new art after Arduino capture completes.
+                    </div>
+                `;
+                artInfo.style.display = 'none';
+                document.getElementById('sendBtn').disabled = true;
+                document.getElementById('downloadBtn').disabled = true;
+                resetStatus.innerHTML = '<div class="status-message status-success">✅ Capture started. When ready, click "Generate New Marble Art" to use the new palette.</div>';
+            } catch (e) {
+                console.error('Reset error:', e);
+                resetStatus.innerHTML = `<div class="status-message status-error">❌ ${e.message || 'Failed to reset from Arduino.'}</div>`;
+            } finally {
+                resetBtn.disabled = false;
+                resetBtn.innerHTML = orig;
+            }
         }
 
 
