--- a/BP-work/marble_gallery1.html
+++ b/BP-work/marble_gallery1.html
@@ -336,15 +336,11 @@
                                 style="background: linear-gradient(45deg, #6c5ce7, #a29bfe);">
                             Download Art
                         </button>
-                        <button type="button" class="send-btn" id="resetBtn" onclick="resetFromArduino()"
-                                style="background: linear-gradient(45deg, #ef4444, #f97316);">
-                            Reset (Read Arduino)
-                        </button>
                     </div>
                     <div class="reset-row">
                         <button type="button" class="send-btn" id="resetBtn" onclick="resetFromArduino()"
                                 style="background: linear-gradient(45deg, #ef4444, #f97316);">
-                            Reset (Read Arduino)
+                            Reset
                         </button>
                     </div>
                 </form>
