--- a/BP-work/marble_gallery1.html
+++ b/BP-work/marble_gallery1.html
@@ -390,6 +390,122 @@
     <script>
     let currentArtPath = null;
     let currentArtInfo = null;
+
+        // Helper to derive a display name from a file path
+        function silhouetteNameFrom(input, fallbackPath) {
+            const val = (input && typeof input === 'string') ? input : (fallbackPath || '');
+            const lower = val.toLowerCase();
+            // If it's a path or a .png/.jpg string, derive from filename
+            if (lower.includes('/') || lower.includes('\\') || lower.endsWith('.png') || lower.endsWith('.jpg') || lower.endsWith('.jpeg')) {
+                const parts = val.split(/[/\\]/);
+                const file = parts[parts.length - 1] || '';
+                const base = file.replace(/\.(png|jpg|jpeg)$/i, '');
+                return base ? (base.charAt(0).toUpperCase() + base.slice(1)) : 'Custom';
+            }
+            // Otherwise, treat as a simple label and capitalize first letter
+            if (val) return val.charAt(0).toUpperCase() + val.slice(1);
+            return 'Custom';
+        }
+
+        // --- Color name mapping helpers ---
+        const COLOR_NAME_MAP = {
+            "#ff0000": "Red", "#ff6b6b": "Coral Red", "#ff3838": "Bright Red", "#ff4757": "Cherry Red",
+            "#ff3f34": "Crimson", "#ff6348": "Tomato Red", "#e74c3c": "Soft Red", "#c0392b": "Dark Red",
+            "#ffa502": "Orange", "#ff9f43": "Light Orange", "#f39c12": "Golden Orange", "#e67e22": "Burnt Orange",
+            "#ff7675": "Peach", "#fd79a8": "Pink Orange",
+            "#f9ca24": "Golden Yellow", "#f1c40f": "Bright Yellow", "#fdcb6e": "Soft Yellow",
+            "#e17055": "Amber", "#fddb3a": "Sunshine Yellow",
+            "#2ed573": "Mint Green", "#7bed9f": "Light Green", "#55efc4": "Aqua Green", "#00b894": "Teal Green",
+            "#4ecdc4": "Turquoise", "#27ae60": "Forest Green", "#16a085": "Dark Teal", "#2ecc71": "Emerald",
+            "#1e90ff": "Sky Blue", "#54a0ff": "Light Blue", "#70a1ff": "Soft Blue", "#45b7d1": "Ocean Blue",
+            "#3742fa": "Royal Blue", "#2f3542": "Navy Blue", "#18dcff": "Cyan Blue", "#00d2d3": "Bright Cyan",
+            "#a0e7e5": "Ice Blue", "#74b9ff": "Periwinkle", "#0984e3": "Deep Blue",
+            "#6c5ce7": "Purple", "#5f27cd": "Deep Purple", "#5352ed": "Violet", "#7d5fff": "Light Purple",
+            "#a29bfe": "Lavender", "#9b59b6": "Plum", "#8e44ad": "Dark Purple",
+            "#ff9ff3": "Pink", "#fd79a8": "Rose Pink", "#e84393": "Hot Pink", "#f368e0": "Magenta Pink",
+            "#ff7675": "Salmon Pink", "#fab1a0": "Peach Pink",
+            "#636e72": "Gray", "#2d3436": "Dark Gray", "#ddd": "Light Gray", "#95a5a6": "Silver Gray",
+            "#34495e": "Slate Gray", "#7f8c8d": "Medium Gray",
+            "#ffffff": "White", "#000000": "Black", "#brown": "Brown", "#tan": "Tan",
+            // Exact Arduino 24-color wheel (overrides if duplicated)
+            "#ff3f00": "Red Orange",
+            "#ff7f00": "Orange",
+            "#ffbf00": "Amber",
+            "#ffff00": "Yellow",
+            "#bfff00": "Yellow Green",
+            "#7fff00": "Lime",
+            "#3fff00": "Lime Green",
+            "#00ff00": "Green",
+            "#00ff3f": "Green Cyan",
+            "#00ff7f": "Spring Green",
+            "#00ffbf": "Aquamarine",
+            "#00ffff": "Cyan",
+            "#00bfff": "Deep Sky Blue",
+            "#007fff": "Azure",
+            "#003fff": "Cobalt Blue",
+            "#0000ff": "Blue",
+            "#3f00ff": "Indigo",
+            "#7f00ff": "Violet",
+            "#bf00ff": "Purple",
+            "#ff00ff": "Magenta",
+            "#ff00bf": "Fuchsia",
+            "#ff007f": "Hot Pink",
+            "#ff003f": "Rose"
+        };
+
+        function hexNorm(hex) {
+            if (!hex) return null;
+            let s = hex.trim().toLowerCase();
+            if (s.startsWith('#')) s = s.slice(1);
+            if (s.length === 3) {
+                s = s[0]+s[0]+s[1]+s[1]+s[2]+s[2];
+            }
+            if (s.length !== 6) return null;
+            return '#'+s;
+        }
+
+        function hexToRgbSafe(hex) {
+            const h = hexNorm(hex);
+            if (!h) return null;
+            const r = parseInt(h.slice(1,3),16), g = parseInt(h.slice(3,5),16), b = parseInt(h.slice(5,7),16);
+            return [r,g,b];
+        }
+
+        function colorDistance(c1, c2) {
+            const dr = c2[0]-c1[0], dg = c2[1]-c1[1], db = c2[2]-c1[2];
+            return Math.sqrt(dr*dr + dg*dg + db*db);
+        }
+
+        function hexToColorName(hex) {
+            const norm = hexNorm(hex);
+            if (!norm) return 'Unknown Color';
+            // Exact match first
+            if (COLOR_NAME_MAP[norm]) return COLOR_NAME_MAP[norm];
+
+            const target = hexToRgbSafe(norm);
+            if (!target) return 'Unknown Color';
+
+            // Find closest known color
+            let bestName = null;
+            let bestDist = Infinity;
+            for (const [k, v] of Object.entries(COLOR_NAME_MAP)) {
+                const rgb = hexToRgbSafe(k);
+                if (!rgb) continue;
+                const d = colorDistance(target, rgb);
+                if (d < bestDist) { bestDist = d; bestName = v; }
+            }
+            if (bestDist < 50) return bestName || 'Unknown Color';
+
+            // Fallback by dominant channel
+            const [r,g,b] = target;
+            if (r > g && r > b) return (r>200) ? 'Bright Red' : (r>150) ? 'Red' : 'Dark Red';
+            if (g > r && g > b) return (g>200) ? 'Bright Green' : (g>150) ? 'Green' : 'Dark Green';
+            if (b > r && b > g) return (b>200) ? 'Bright Blue' : (b>150) ? 'Blue' : 'Dark Blue';
+            if (r > 150 && g > 150) return 'Yellow';
+            if (r > 150 && b > 150) return 'Purple';
+            if (g > 150 && b > 150) return 'Teal';
+            return 'Gray';
+        }
     let selectedSilhouette = null; 
 
         async function generateArt() {
@@ -576,10 +692,12 @@
         };
 
 
+        const silhouetteDisplay = silhouetteNameFrom(details.silhouette, imagePath);
+        const hexList = (details.colors && details.colors.length ? details.colors : (paletteHex || []));
+        const colorNames = (hexList || []).map(hexToColorName);
         artDetails.innerHTML = `
-            <strong>Silhouette:</strong> ${details.silhouette || 'Custom'}<br>
-            <strong>Colors:</strong> ${(details.colors || paletteHex || []).join(', ')}<br>
-            <strong>Seed:</strong> ${details.seed ?? 'N/A'}<br>
+            <strong>Silhouette:</strong> ${silhouetteDisplay}<br>
+            <strong>Colors:</strong> ${colorNames.join(', ')}<br>
             <strong>Generated:</strong> ${new Date().toLocaleString()}
         `;
         artInfo.style.display = 'block';
