--- a/BP-work/marble_gallery1.html
+++ b/BP-work/marble_gallery1.html
@@ -14,7 +14,7 @@
             font-family: 'Arial', sans-serif;
             background: #b7b3ff;
             min-height: 100vh;
-            color: #453fae;
+            color: #000000;
         }
 
         .header {
@@ -83,6 +83,7 @@
 
         .generate-section {
             margin-bottom: 2rem;
+            color: #453fae;
         }
 
         .generate-section h2 {
@@ -93,7 +94,7 @@
 
         .generate-btn {
             background: linear-gradient(45deg, #847ef6, #908bee);
-            color: white;
+            color: #453fae;
             border: none;
             padding: 1rem 2rem;
             font-size: 1.1rem;
@@ -201,6 +202,7 @@
             margin-top: 1rem;
             text-align: center;
             font-weight: 600;
+            color: #4f4aba;
         }
 
         .status-success {
@@ -217,7 +219,7 @@
 
         .status-info {
             background: #a7a3f5;
-            color: #908bee;
+            color: #413d90;
             border: 1px solid #908bee;
         }
 
